# cerelien-backend

./: .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
app/: __init__.py  main.py
app/api/: deps.py  error_handlers.py
app/api/middleware/: auth.py
app/api/routes/: chat_routes.py  health_routes.py  patient_routes.py  sms_routes.py  voice_routes.py
app/core/: config.py  exceptions.py
app/domain/entities/: analytics_result_entity.py  conversation_entity.py  glucose_reading_entity.py  medication_entity.py  message_entity.py  patient_entity.py
app/domain/interfaces/: analytics_repository.py  conversation_repository.py  patient_repository.py
app/domain/workflows/: consultation_workflow.py  patient_workflow.py  sms_workflow.py
app/infrastructure/adapters/: firebase_auth_adapter.py  openai_realtime_adapter.py  twilio_adapter.py
app/infrastructure/repositories/: sql_patient_repository.py  (+2 more)
app/schemas/: chat_schemas.py  patient_schemas.py  voice_schemas.py
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: backend-stack.ts
db/seed/: seed_all.py  seed_analytics.py  seed_glucose.py  seed_medications.py  seed_patients.py
scripts/: deploy.sh
tests/: test_chat_routes.py  test_health.py  test_more_routes.py  test_patient_routes.py  test_sms_routes.py  test_voice_routes.py
tests/unit/: test_adapters.py  test_agent_tools.py  test_agents.py  test_auth_middleware.py  test_consultation_workflow.py  test_entities.py  test_more_repositories.py  test_patient_workflow.py  test_repositories.py  test_sms_workflow.py
(+9 files in other folders)
