[tool.poetry]
name = "cerelien-backend"
version = "0.1.0"
description = "Cerelien AI - Diabetes Consultation Platform Backend"
authors = ["SPARThoughts Inc"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.0"
openai-agents = "^0.0.13"
twilio = "^9.4.0"
firebase-admin = "^6.6.0"
httpx = "^0.28.0"
websockets = "^14.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"
ruff = "^0.9.0"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
